[gd_scene load_steps=26 format=3 uid="uid://dxvft828c2tsd"]

[ext_resource type="PackedScene" uid="uid://3e0cvi4n2eeo" path="res://Tools/EntityBases/entityBase.tscn" id="1_5lsk3"]
[ext_resource type="Script" path="res://Tools/SpellSystem/SpellSupplier/spellSupplier.gd" id="2_0hxqa"]
[ext_resource type="Texture2D" uid="uid://bue62aa45gnmt" path="res://Assets/Minifantasy_Wizards_Academy_Assets/Props/Props.png" id="2_u8tgc"]
[ext_resource type="Texture2D" uid="uid://bdtg0os0u7u2g" path="res://Assets/Minifantasy_Magic_Weapons_And_Effects_Assets/Standalone Effects/Status Effects/Status_petrification.png" id="3_2cejo"]
[ext_resource type="Resource" uid="uid://dctmcc743dlf4" path="res://Tools/SpellSystem/Spells/Spells/homingMagicProjectile.tres" id="3_ewetx"]
[ext_resource type="Script" path="res://Tools/World/Load and deload/persistantData.gd" id="4_6efly"]
[ext_resource type="PackedScene" uid="uid://yokqp6py1s2f" path="res://Tools/SpellSystem/SpellSupplier/spellDescriptionUI.tscn" id="6_5xao8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24nae"]
atlas = ExtResource("2_u8tgc")
region = Rect2(536, 485, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_euyfw"]
atlas = ExtResource("2_u8tgc")
region = Rect2(536, 421, 16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rygh"]
resource_local_to_scene = true
atlas = ExtResource("2_u8tgc")
region = Rect2(536, 485, 16, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6x7w"]
size = Vector2(16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ushcn"]
resource_local_to_scene = true
atlas = ExtResource("3_2cejo")
region = Rect2(234, 9, 9, 13)

[sub_resource type="Animation" id="Animation_63m85"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearDisappear/AppearDisappearSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearDisappear/AppearDisappearSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ushcn")]
}

[sub_resource type="Animation" id="Animation_ct5bu"]
resource_name = "entityAppear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AppearDisappear/AppearDisappearSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ushcn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:atlas")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2cejo")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(234, 9, 9, 13), Rect2(202, 10, 12, 12), Rect2(172, 12, 8, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AppearDisappear/AppearDisappearSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_af7xm"]
resource_name = "entityDisappear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AppearDisappear/AppearDisappearSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ushcn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:atlas")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2cejo")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearDisappear/AppearDisappearSprite:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(172, 12, 8, 8), Rect2(202, 10, 12, 12), Rect2(234, 9, 9, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AppearDisappear/AppearDisappearSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_06lbj"]
resource_local_to_scene = true
_data = {
"RESET": SubResource("Animation_63m85"),
"entityAppear": SubResource("Animation_ct5bu"),
"entityDisappear": SubResource("Animation_af7xm")
}

[sub_resource type="Resource" id="Resource_ol8ac"]
script = ExtResource("4_6efly")
node_path = "DamageReceiver"
property = "amount"

[sub_resource type="Resource" id="Resource_t2te8"]
script = ExtResource("4_6efly")
node_path = "SpellSupplier"
property = "cost"

[sub_resource type="Animation" id="Animation_6r4sy"]
resource_name = "Appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellDescription:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jnvt5"]
resource_name = "Disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellDescription:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_balit"]
_data = {
"Appear": SubResource("Animation_6r4sy"),
"Disappear": SubResource("Animation_jnvt5")
}

[sub_resource type="Animation" id="Animation_x0jyk"]
resource_name = "activate"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellDescription:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.21, 1.21), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpellDescription:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.199667, 1, 0.02, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cbl1m"]
resource_name = "tooExpensive"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellDescription:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.86, 0.86), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpellDescription:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.74, 0.74, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6a03b"]
_data = {
"activate": SubResource("Animation_x0jyk"),
"tooExpensive": SubResource("Animation_cbl1m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gphqt"]
radius = 31.0161

[node name="SpellSupplier" groups=["SpellSupplier"] instance=ExtResource("1_5lsk3")]

[node name="SpellSupplier" type="Node2D" parent="." index="0" node_paths=PackedStringArray("interaction_animation_player", "spell_description_ui", "popup_animation_player", "sprite", "popup_area")]
script = ExtResource("2_0hxqa")
interaction_animation_player = NodePath("../InterractionAnimation")
spell_description_ui = NodePath("../SpellDescription")
popup_animation_player = NodePath("../SpellDescription/SpellDescriptionAnimator")
sprite = NodePath("../Sprite2D")
pre_activation_sprite = SubResource("AtlasTexture_24nae")
post_activation_sprite = SubResource("AtlasTexture_euyfw")
popup_area = NodePath("../PopupArea")
spell = ExtResource("3_ewetx")
cost = 0

[node name="Shadow" parent="." index="1"]
scale = Vector2(0.84525, 0.333333)
offset = Vector2(-2.048, -0.0950003)

[node name="TopDownEntity2D" parent="." index="2"]
is_static = true

[node name="DamageReceiver" parent="." index="3"]
ignore_all_damage = true

[node name="HealthBar" parent="." index="4"]
offset_top = -30.095
offset_bottom = -25.095

[node name="Sprite2D" parent="." index="5"]
texture = SubResource("AtlasTexture_1rygh")
offset = Vector2(0, -12.595)

[node name="HitBox" parent="." index="6"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_i6x7w")
use_sprite_as_hitbox = false

[node name="AppearDisappearAnimationPlayer" parent="AppearDisappear" index="0"]
libraries = {
"": SubResource("AnimationLibrary_06lbj")
}

[node name="AppearDisappearSprite" parent="AppearDisappear" index="1"]
texture = SubResource("AtlasTexture_ushcn")

[node name="DeloadPersistance" parent="." index="9"]
persistant_data = Array[ExtResource("4_6efly")]([SubResource("Resource_ol8ac"), SubResource("Resource_t2te8")])

[node name="SpellDescription" parent="." index="12" instance=ExtResource("6_5xao8")]
position = Vector2(1, -21)
spell_description_text = ""

[node name="SpellDescriptionAnimator" type="AnimationPlayer" parent="SpellDescription" index="1"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_balit")
}

[node name="InterractionAnimation" type="AnimationPlayer" parent="." index="13"]
libraries = {
"": SubResource("AnimationLibrary_6a03b")
}

[node name="PopupArea" type="Area2D" parent="." index="14"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PopupArea" index="0"]
shape = SubResource("CircleShape2D_gphqt")

[connection signal="body_entered" from="PopupArea" to="SpellSupplier" method="_on_popup_area_body_entered"]
[connection signal="body_exited" from="PopupArea" to="SpellSupplier" method="_on_popup_area_body_exited"]
